--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,9 @@
 @import '~bootstrap/scss/bootstrap';
+
+.box {
+  background-color: white;
+  border: 1px solid black;
+  color: black;
+  display: flex;
+  justify-content: center;
+}
