--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,31 @@
 @import '~bootstrap/scss/bootstrap';
+
+.box {
+  background-color: white;
+  border: 1px solid black;
+  color: blue;
+  align-items: center;
+  display: flex;
+  height: 100px;
+  justify-content: center;
+}
+
+.player {
+  background-color: white;
+  border: 1px solid black;
+  color: red;
+  align-items: center;
+  display: flex;
+  height: 100px;
+  justify-content: center;
+}
+
+.message {
+  background-color: white;
+  border: 1px solid black;
+  color: green;
+  align-items: center;
+  display: flex;
+  height: 100px;
+  justify-content: center;
+}
